--- a/ButlerBot.cabal
+++ b/ButlerBot.cabal
@@ -8,4 +8,4 @@ Build-Type:          Simple
 Cabal-Version:       >=1.2
 Executable butler-bot
   Main-is:           ButlerBot.hs
-  Build-Depends:     base, http-wget, json, smtp-mail
+  Build-Depends:     base, curl, json, smtp-mail
